lab1/css/styles.css
body {
    background-color:darkslategrey;
    color:cornsilk;
}

header, main, nav, footer {
    text-align: center;
}

footer {
    size: 2em;
    color:lightgreen;
}

table {
    margin: 0px auto;
}

td {
    padding-right: 10px;
    font-size: 1.3em;
}

td strong {
    color:pink
}

#table-header {
    background-color: darkcyan;
}

.table-row {
    background-color:seagreen;
}

ul {
    width: 500px;
    margin: 0 auto;
    text-align: left;
}

.hobby {
    color:pink;
}

nav a { /*links within "nav" container*/
    padding:15px;
    padding-bottom:4px;
    font-size:1.8em;
    text-decoration: none; /*removes underline*/
    color:white; /*by default, links are blue*/
}

nav a:hover { /*pseudo class*/
    border-bottom: 2px pink solid;
    font-size: 2em;
    transition: .9s; /*transition effect*/
}

a.active {
    color: lightpink;
    font-weight: bold;
}

main {
    display:flex;
    justify-content: center;
}

body {
    font-family: "Open Sans", sans-serif;
    font-optical-sizing: auto;
    font-weight: 300;
    font-style: normal;
    font-variation-settings:
        "wdth" 100;
}

h1 {
  font-family: "Jacques Francois", serif;
  font-weight: 500;
  font-style: normal;
}

footer {
    font-size: 2px;
    font-family: "Inter", sans-serif;
    font-optical-sizing: auto;
    font-weight: 300;
    font-style: light;
}

